# OverSight-ITC303

./: .gitignore  .versionrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  check-expiry.sh  config.json  dev.bat  dev.ps1  generate-token.js  install.bat  install.ps1  make.bat  package-lock.json  package.json  report.xml  setup-aliases.ps1  setup-ssl.sh
Database/: readme.md
MonitoringScript/: config.example.json  monitoring_script.py  pyproject.toml  readme.md  test.py
MonitoringScript/oversight_monitoring/: __init__.py  monitoring_script.py  script_json.py  script_xml.py  system_monitor.py
MonitoringScript/tests/: __init__.py  test_basic.py
Server/: ALERT_UI_README.md  QA_Test_Documentation.md  env.example  get-token.js  middleware.ts  package-lock.json  package.json  readme.md  server.ts  test-ws-connection.js
Server/app/: layout.tsx  page.tsx
Server/components/: admin-sidebar.tsx  dashboard-layout.tsx  footer.tsx  header.tsx  live-metrics-chart.tsx  standard-sidebar.tsx  ws_data.json  ws_data_old.json
Server/hooks/: useAuthenticatedWebSocket.ts
Server/lib/: auth-config.ts  auth.ts  authOptions.ts  csvGenerator.ts  getDb.ts  mock.ts  mongodb.ts  reportPdfGenerator.ts  websocketDb.ts
Server/scripts/: check-current-settings.ts  debug-alerts.ts  generate-test-alerts.ts  get-ws-token.ts  migrate-alertlog.ts  seed-alerts.ts  seed-db.ts  test-hysteresis-logic.ts  test-migration.ts  (+1 more)
docs/: DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  SECURITY.md
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+1 more)
(+48 files in other folders)
